--- a/timecausgabordemo.ipynb
+++ b/timecausgabordemo.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pytempscsp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpygabor\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtimecausgabor\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reload\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/pygabor/pygabor/timecausgabor.py:16\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Union\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpytempscsp\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtempscsp\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m limitkernfilt, limitkernfilt_mult\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtimecausgabor\u001b[39m(\n\u001b[32m     20\u001b[39m         signal : np.ndarray,\n\u001b[32m     21\u001b[39m         time: Union[\u001b[38;5;28mfloat\u001b[39m, np.ndarray],\n\u001b[32m   (...)\u001b[39m\u001b[32m     26\u001b[39m         method: \u001b[38;5;28mstr\u001b[39m = \u001b[33m'\u001b[39m\u001b[33mexplicitcascade\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     27\u001b[39m ) -> (np.ndarray, np.ndarray) :\n\u001b[32m     28\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Computes one slice of a discrete approximation of the time-causal \u001b[39;00m\n\u001b[32m     29\u001b[39m \u001b[33;03manalogue of the Gabor transform of a signal for a given angular frequency omega \u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[33;03mand using temporal smoothing with temporal standard deviation sigma.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     43\u001b[39m \u001b[33;03mfrequency omega.\u001b[39;00m\n\u001b[32m     44\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pytempscsp'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pygabor.timecausgabor\n",
@@ -612,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
