--- a/rectimecausgabordemo.ipynb
+++ b/rectimecausgabordemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,40 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Constants\n",
-    "Nt = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a temporal signal for testing purposes\n",
-    "from pygabor.discgabor import whitenoisesignal1D\n",
-    "testsignal = whitenoisesignal1D(Nt)"
+    "\n",
+    "Nt = 100\n",
+    "delta_t = 1\n",
+    "\n",
+    "time = delta_t * np.linspace(0, Nt-1, Nt)\n",
+    "omega_1 = 1 * time\n",
+    "omega_2 = 2 * time\n",
+    "testsignal = np.zeros(Nt)\n",
+    "\n",
+    "testsignal = np.cos(omega_1) + np.cos(omega_2)\n",
+    "\n",
+    "print(testsignal)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use this function when computing the time-frequency transform at a single temporal scale\n",
     "\n",
-    "#output = np.zeros((J, K, N))\n",
+    "rectimecausgabor = RecursiveTimeCausGaborMethod([1, 2, 4])\n",
     "\n",
-    "rectimecausgabor = RecursiveTimeCausGaborMethod([1, 2, 4]))\n",
-    "\n",
-    "for tn in range(Nt):\n",
+    "for n in range(Nt):\n",
     "    transform = rectimecausgabor.process(testsignal[n])\n",
-    "    print(transform)"
+    "    print(transform)\n"
    ]
   }
  ],
@@ -64,18 +62,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.1"
   }
  },
  "nbformat": 4,
