Adapting the testsignal

--- a/rectimecausgabordemo.ipynb
+++ b/rectimecausgabordemo.ipynb
@@ -23,45 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.          1.76007351  1.11803399  0.27876826 -0.5        -1.\n",
-      " -1.11803399 -0.89680225 -0.5        -0.14203952  0.         -0.14203952\n",
-      " -0.5        -0.89680225 -1.11803399 -1.         -0.5         0.27876826\n",
-      "  1.11803399  1.76007351  2.          1.76007351  1.11803399  0.27876826\n",
-      " -0.5        -1.         -1.11803399 -0.89680225 -0.5        -0.14203952\n",
-      "  0.         -0.14203952 -0.5        -0.89680225 -1.11803399 -1.\n",
-      " -0.5         0.27876826  1.11803399  1.76007351  2.          1.76007351\n",
-      "  1.11803399  0.27876826 -0.5        -1.         -1.11803399 -0.89680225\n",
-      " -0.5        -0.14203952  0.         -0.14203952 -0.5        -0.89680225\n",
-      " -1.11803399 -1.         -0.5         0.27876826  1.11803399  1.76007351\n",
-      "  2.          1.76007351  1.11803399  0.27876826 -0.5        -1.\n",
-      " -1.11803399 -0.89680225 -0.5        -0.14203952  0.         -0.14203952\n",
-      " -0.5        -0.89680225 -1.11803399 -1.         -0.5         0.27876826\n",
-      "  1.11803399  1.76007351  2.          1.76007351  1.11803399  0.27876826\n",
-      " -0.5        -1.         -1.11803399 -0.89680225 -0.5        -0.14203952\n",
-      "  0.         -0.14203952 -0.5        -0.89680225 -1.11803399 -1.\n",
-      " -0.5         0.27876826  1.11803399  1.76007351]\n"
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to expression (1643274363.py, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtestsignal = np.cos(omega_1) + np.cos(omega_2) = np.cos(omega_3) + np.cos(omega_4)\u001b[39m\n                 ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m cannot assign to expression\n"
      ]
     }
    ],
    "source": [
     "# Generate a temporal signal for testing purposes\n",
     "\n",
-    "Nt = 100\n",
-    "delta_t = 1\n",
+    "Nt = 1000\n",
+    "delta_t = 0.1\n",
     "\n",
     "time = delta_t * np.linspace(0, Nt-1, Nt)\n",
     "omega_1 = 2 * np.pi / 20 * time\n",
     "omega_2 = 2 * np.pi / 10 * time\n",
+    "omega_3 = 2 * np.pi / 5 * time\n",
+    "omega_4 = 2 * np.pi / 2 * time\n",
     "testsignal = np.zeros(Nt)\n",
     "\n",
-    "testsignal = np.cos(omega_1) + np.cos(omega_2)\n",
+    "testsignal = np.cos(omega_1) + np.cos(omega_2) + np.cos(omega_3) + np.cos(omega_4)\n",
     "#testsignal = np.cos(omega_1)\n",
     "#testsignal = np.cos(omega_2)\n",
     "\n",
@@ -263,7 +250,7 @@
    ],
    "source": [
     "\n",
-    "plt.imshow(levels_arr, origin='lower')\n",
+    "plt.imshow(levels_arr, origin='lower', extent=[0, delta_t*Nt, 0, numfreqs*numlevels]))\n",
     "print(levels_arr.shape)\n",
     "plt.plot(time, 2*testsignal)"
    ]
